# geminiastro-indi

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md  indi_geminiastro_focus.xml
.github/workflows/: ci.yml
cmake/: FindINDI.cmake
docs/: hardware-test-plan.md  hardware-validation-results-2026-06-21.md
src/: geminiastro_focuser.cpp  geminiastro_focuser.h  geminiastro_probe.cpp  geminiastro_protocol.cpp  geminiastro_protocol.h
tests/: test_protocol.cpp
